--- a/src/Avatar/Avatar.css
+++ b/src/Avatar/Avatar.css
@@ -96,6 +96,54 @@
     background-repeat: no-repeat;
 }
 
+.bodySQL{
+    border-radius: 20px;
+    background-color: salmon;
+    width: 110px;
+    height: 120px;
+    margin-left: 95px;
+    background-image: url("../Assets/sql.png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.bodyNOSQL{
+    border-radius: 20px;
+    background-color: salmon;
+    width: 110px;
+    height: 120px;
+    margin-left: 95px;
+    background-image: url("../Assets/nosql.png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.bodyExpress{
+    border-radius: 20px;
+    background-color: salmon;
+    width: 110px;
+    height: 120px;
+    margin-left: 95px;
+    background-image: url("../Assets/express.png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.bodyDjango{
+    border-radius: 20px;
+    background-color: salmon;
+    width: 110px;
+    height: 120px;
+    margin-left: 95px;
+    background-image: url("../Assets/django.png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
 .legs{
     position: relative;
 }
