--- a/src/Play/Play.css
+++ b/src/Play/Play.css
@@ -16,24 +16,72 @@
 .players{
     display: flex;
     flex-direction: row;
-    background-color: brown;
     justify-content: space-between;
 }
 
 .player1{
     width: 50%;
-    border: 1px solid blue;
     float: left;
 }
 
 .player2{
     width: 50%;
-    border: 1px solid blue;
     float: right;
 }
 
-/* .players>div{
-    background-color: red;
+.points{
+    text-align: center;
+    background-color: rgb(189, 241, 137);
+}
+
+.differencesTable{
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    top: 65%;
+    margin: auto;
+    left: 0;
+    right: 0;
+}
+
+.differencesTable>div{
     width: 50%;
-    border: 1px solid blue;
-} */
+    border: 1px solid black;
+}
+
+.dropdown{
+    background-color: cadetblue;
+    color: white;
+    padding: 12px;
+    outline: none;
+    border: none;
+    margin-top: 20px;
+    font-size: 15px;
+}
+
+.playBtn{
+    background-color: cadetblue;
+    color: white;
+    border: none;
+    outline: none;
+    padding: 12px;
+    font-size: 15px;
+    cursor: pointer;
+    position: absolute;
+    left: 60%;
+    margin-top: 20px;
+}
+
+.stopBtn{
+    background-color: cadetblue;
+    color: white;
+    border: none;
+    outline: none;
+    padding: 12px;
+    font-size: 15px;
+    cursor: pointer;
+    position: absolute;
+    left: 65%;
+    margin-top: 20px;
+}
