--- a/src/Play/Play.css
+++ b/src/Play/Play.css
@@ -2,7 +2,6 @@
     background-color: black;
     width: 80%;
     height: 100px;
-    position: absolute;
     margin: auto;
     left: 0;
     right: 0;
@@ -17,6 +16,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    margin-top: 10px;
 }
 
 .player1{
@@ -68,9 +68,8 @@
     padding: 12px;
     font-size: 15px;
     cursor: pointer;
-    position: absolute;
-    left: 60%;
     margin-top: 20px;
+    margin-left: 10px;
 }
 
 .stopBtn{
@@ -81,7 +80,11 @@
     padding: 12px;
     font-size: 15px;
     cursor: pointer;
-    position: absolute;
-    left: 65%;
     margin-top: 20px;
+    margin-left: 10px;
+}
+
+.slides{
+    margin-bottom: 0px;
+    font-weight: normal;
 }
